--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mirea-exams",
   "type": "module",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/mdx": "^2.0.0",
     "astro": "^4.0.3",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "typescript": "^5.3.3"
   }
 }
