--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mirea-exams",
   "type": "module",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -12,7 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/mdx": "^2.0.0",
+    "@fontsource-variable/golos-text": "^5.0.8",
     "astro": "^4.0.3",
+    "astro-icon": "^0.8.2",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "typescript": "^5.3.3"
