--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mirea-exams",
   "type": "module",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -15,6 +15,7 @@
     "@fontsource-variable/golos-text": "^5.0.8",
     "astro": "^4.0.3",
     "astro-icon": "^0.8.2",
+    "astro-typograf": "^2.0.0",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "typescript": "^5.3.3"
