--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mirea-exams",
   "type": "module",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/mdx": "^2.0.0",
     "@fontsource-variable/golos-text": "^5.0.8",
+    "@fontsource/jetbrains-mono": "^5.0.18",
     "astro": "^4.0.3",
     "astro-icon": "^0.8.2",
     "astro-typograf": "^2.0.0",
