--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/golos-text": "^5.0.8",
     "@fontsource/jetbrains-mono": "^5.0.18",
     "astro": "^4.0.3",
+    "astro-diagram": "^0.7.0",
     "astro-icon": "^0.8.2",
     "astro-typograf": "^2.0.0",
     "rehype-katex": "^7.0.0",
